2004-09-30 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added unit tests for --help
	* Added unit tests for 'files'

2004-09-27 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added short commands
	* Fixed copyright dates
	* Fixed belongs to search only installed packages
	* Fixed reporting bug in uses command
	* Fixed reference to cppv
	* Added import of die
	* Added searching header to uses
	* Fixed hasuses to report properly

2004-09-08 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added man page rewrites by Katerina Barone-Adesi <katerinab@gmail.com>,
	fixes #63045
	* Fixed spacing issues with files, fixes #63036.
	* Added depends command by Olivier Crete <tester@gentoo.org>, fixes
	#40830.
	* Reworked output yet again.
	* Belongs handles multiple files on the command line, partially fixes
	#62361.

2004-08-29 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added check for bad regexp in belongs, fixes #58494
	* Added proper error reporting to stderr, fixes #57580

2004-08-22 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Searches now include masked packages, when installed.
	* Fixed output to be piping-friendly
	* Added -N option to force non-piping output
	* Added hasuses command

2004-05-04 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added a -f/--full-regex option to belongs and some logic
          so users can do belongs ant, belongs /usr/bin/ant and
          belongs -f ".*ant.*" while getting sensible results. 
          Fixes #37637.

2004-03-13 Marius Mauch <genone@gentoo.org>
	* fixing descriptions for local USE flags
	* more checking on exceptions


2004-01-23 Marius Mauch <genone@gentoo.org>
	* now catches Exceptions thrown by portage
	* minor bugfixes

2004-01-12 Marius Mauch <genone@gentoo.org>
	* added mask, keyword and slot information to list command

2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Renamed to equery
	* Added Makefile
	
2003-12-31 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added which command