@@ -1,3 +1,6 @@
+2004-10-10 Karl Trygve Kalleberg <karltk@gentoo.org>
+	* Added unit tests for all supported commands
+
 2004-09-30 Karl Trygve Kalleberg <karltk@gentoo.org>
 	* Added unit tests for --help
 	* Added unit tests for 'files'
